src/test/ui/traits/trait-object-macro-matcher.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!(dyn 'static +);
   |        ^^^^^^^^^^^^^

error[E0038]: the trait `std::marker::Copy` cannot be made into an object
  --> $DIR/trait-object-macro-matcher.rs:8:8
   |
LL |     m!(dyn Copy + Send + 'static);
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` cannot be made into an object
   |
   = note: the trait cannot be made into an object because it requires `Self: Sized`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0224.
For more information about an error, try `rustc --explain E0038`.
